--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+otel.exporter.otlp.endpoint=http://10.0.2.4:4317
